--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -30,56 +30,68 @@ Old High German only has proper attraction. Modern German only has inverse attra
 \subsection{Gothic}
 
 \ex. \tsc{int:nom}, \tsc{ext:acc}
-\ag. jah þ-o-ei ist us Laudeikaion jus ussiggwaid\\
+\a. \tsc{nom} not attested
+\bg. jah þ-o-ei ist us Laudeikaion jus ussiggwaid\\
  and D-\tsc{f.sg.acc}-\tsc{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
- `and read that which is from Laodicea' \hfill Colossians 4:16, gloss and translation by \citealt[357]{harbert1978}
+ `and read that which is from Laodicea' \hfill (Colossians 4:16, gloss and translation by \citealt[357]{harbert1978})
 
- \ex. \tsc{int:nom}, \tsc{ext:dat}
- \ag. þ-aim-ei iupa sind fraþjaiþ\\
-  D-\tsc{pl.dat}-\tsc{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
-  `set your mind on those which are above' \hfill Colossians 3:2, gloss and translation by \citealt[339]{harbert1978}
+\ex. \tsc{int:nom}, \tsc{ext:dat}
+\a. \tsc{nom} not attested
+\bg. þ-aim-ei iupa sind fraþjaiþ\\
+ D-\tsc{pl.dat}-\tsc{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
+ `set your mind on those which are above' \hfill (Colossians 3:2, gloss and translation by \citealt[339]{harbert1978})
 
 \ex. \tsc{int:nom}, \tsc{ext:gen}
-\a. not attested
+\a. \tsc{nom} not attested
+\b. \tsc{gen} not attested
 
 \ex. \tsc{int:acc}, \tsc{ext:nom}
 \ag. þ-an-ei frijos siuks ist\\
  D-\tsc{m.sg.acc}-\tsc{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
- `the one whom you love is sick' \hfill John 11:3, gloss and translation by \citealt[342]{harbert1978}
+ `the one whom you love is sick' \hfill (John 11:3, gloss and translation by \citealt[342]{harbert1978})
+\b. \tsc{nom} not attested
 
- \ex. \tsc{int:acc}, \tsc{ext:dat}
- \ag. hva nu wileiþ ei taujau þ-amm-ei qiþiþ þiudan Iudaie?\\
+\ex. \tsc{int:acc}, \tsc{ext:dat}
+\a. \tsc{acc} not attested
+\bg. hva nu wileiþ ei taujau þ-amm-ei qiþiþ þiudan Iudaie?\\
  what now want that do\scsub{[dat]} D-\tsc{m.sg.dat}-\tsc{comp} say\scsub{[acc]} king {of Jews}\\
- `what now do you wish that I do to him whom you call King of the Jews?' \hfill Mark 15:12, gloss and translation by \citealt[339]{harbert1978}
+ `what now do you wish that I do to him whom you call King of the Jews?' \hfill (Mark 15:12, gloss and translation by \citealt[339]{harbert1978})
 
- \ex. \tsc{int:acc}, \tsc{ext:gen}
- \ag. ni waiht þ-iz-ei gasehvun\\
-  not thing\scsub{[gen]} D-\tsc{n.sg.gen}-\tsc{comp} saw\scsub{[acc]}\\
-  `not any of that which they saw' \hfill Luke 9:36, gloss and translation by \citealt[340]{harbert1978}
+\ex. \tsc{int:acc}, \tsc{ext:gen}
+\a. \tsc{acc} not attested
+\bg. ni waiht þ-iz-ei gasehvun\\
+ not thing\scsub{[gen]} D-\tsc{n.sg.gen}-\tsc{comp} saw\scsub{[acc]}\\
+ `not any of that which they saw' \hfill (Luke 9:36, gloss and translation by \citealt[340]{harbert1978})
 
 \ex. \tsc{int:dat}, \tsc{ext:nom}
 \ag. iþ þ-amm-ei leitil fraletada leitil frijod\\
-but D-\tsc{m.sg.dat}-\tsc{comp} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
-`but the one whom little is forgiven loves little' \hfill Luke 7:47, gloss and translation by \citealt[342]{harbert1978}
+ but D-\tsc{m.sg.dat}-\tsc{comp} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
+ `but the one whom little is forgiven loves little' \hfill (Luke 7:47, gloss and translation by \citealt[342]{harbert1978})
+\b. \tsc{nom} not attested
 
 \ex. \tsc{int:dat}, \tsc{ext:acc}
 \ag. ushafjands ana þ-amm-ei lag\\
-picking up on\scsub{[acc]} D-\tsc{m.sg.dat}-\tsc{comp} lay\scsub{[dat]}\\
-`picking up that on which he lay' \hfill Luke 5:25, gloss and translation by \citealt[343]{harbert1978}
+ picking up on\scsub{[acc]} D-\tsc{m.sg.dat}-\tsc{comp} lay\scsub{[dat]}\\
+ `picking up that on which he lay' \hfill (Luke 5:25, gloss and translation by \citealt[343]{harbert1978})
+\b. \tsc{acc} not attested
 
 \ex. \tsc{int:dat}, \tsc{ext:gen}
-\a. not attested
+\a. \tsc{dat} not attested
+\b. \tsc{gen} not attested
 
 \ex.  \tsc{int:gen}, \tsc{ext:nom}
-\a. not attested
+\a. \tsc{gen} not attested
+\b. \tsc{nom} not attested
 
 \ex. \tsc{int:gen}, \tsc{ext:acc}
 \ag. bugei þ-iz-ei þaurbeima\\
  buy\scsub{[acc]} D-\tsc{n.sg.gen}-\tsc{comp} need\scsub{[gen]}\\
- `buy that which we need' \hfill John 13:29, gloss and translation by \citealt[343]{harbert1978}
+ `buy that which we need' \hfill (John 13:29, gloss and translation by \citealt[343]{harbert1978})
+\b. \tsc{acc} not attested
 
 \ex. \tsc{int:gen}, \tsc{ext:dat}
-\a. not attested
+\a. \tsc{gen} not attested
+\b. \tsc{dat} not attested
 
 
 \begin{table}[h]
@@ -127,14 +139,15 @@ picking up on\scsub{[acc]} D-\tsc{m.sg.dat}-\tsc{comp} lay\scsub{[dat]}\\
 
 \subsection{Old High German}
 
-
 \ex. \tsc{int:nom}, \tsc{ext:acc}
-\ag. ih bibringu fona Juda dhen mina berga chisetzit\\
+\a. \tsc{nom} not attested
+\bg. ih bibringu fona Juda dhen mina berga chisetzit\\
  I educate von Juda D-\tsc{m/n/f.pl.dat}/\tsc{m.sg.acc} my? mountain order/put\\
  `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
 
 \ex. \tsc{int:nom}, \tsc{ext:dat}
-\ag. Aer antuurta demo zaimo sprah.\\
+\a. \tsc{nom} not attested
+\bg. aer antuurta demo zaimo sprah\\
 he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
 `He replied to the one who spoke to him.' \hfill (Old High German, Monsee Fragments 7,24, \citealt[761]{behaghel1923})
 \bg. gebe themo ni eigi\\
@@ -142,54 +155,81 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
  `give to whom that does not have' gebe dem der nicht hat \hfill (Old High German, Otfrid I,24,77, Schrodt,175)
 
 \ex. \tsc{int:nom}, \tsc{ext:gen}
-\ag. suachit thes nan sentit\\
+\a. \tsc{nom} not attested
+\bg. suachit thes nan sentit\\
  search.\tsc{3.sg}\scsub{gen?} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\\
  `he searched for who sent him/ der sucht die Sachen dessen der ihn sendet' \hfill (Old High German, Otfrid III,16,21, \citealt[761]{behaghel1923})
 \bg. diu habe niemer niht entuot, des der seele schaden si\\
  they have not never {not do} D-\tsc{gen.sg.n} the soul damage is\scsub{[nom]}\\
  `' \hfill (Middle High German, Warn. 2490, \citealt[761]{behaghel1923})
 
+\ex. \tsc{int:acc}, \tsc{ext:nom}
+\a. \tsc{acc} not attested
+\b. \tsc{nom} not attested
+
 \ex. \tsc{int:acc}, \tsc{ext:dat}
-\ag. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
+\a. \tsc{acc} not attested
+\bg. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
  {are you} {superior to}\scsub{[dat]} Abraham also D-\tsc{d.pl} one here now mentioned\scsub{[acc]}\\
  `are you bigger than Abraham and those people named just now?' \hfill (Old High German, Otfrid III,18,33, \citealt[761]{behaghel1923})
 
-\ex. \tsc{ext:gen}, \tsc{int:acc}
-\ag. der bewiset in des er suochte\\
+\ex. \tsc{int:acc}, \tsc{ext:gen}
+\a. \tsc{acc} not attested
+\bg. der bewiset in des er suochte\\
  he directed\scsub{[gen]} him D-\tsc{n.sg.gen} he sought\scsub{[acc]}\\
  `He directed him to what he sought.' \hfill (Middle High German, Iwein 988, \citealt[761]{behaghel1923}), trans. Hartmann von Aue-Portal
 \bg. giwisso ni birut ir thero ih irwellu zi mir\\
  bestimmt not belong\scsub{[gen]} \tsc{2.pl.nom} D-\tsc{gen.pl} I choose\scsub{[acc]} to me\\
  `you surely do not belong to those that I choose for myself //sicherlich gehört ihr nicht zu denen die ich mir erwähle' \hfill (Old High German, Otfrid III,22,20, Schrodt,p.175)
 
-\ex. \tsc{ext:gen}, \tsc{int:dat}
+\ex. \tsc{int:dat}, \tsc{ext:nom}
+\a. \tsc{dat} not attested
+\b. \tsc{nom} not attested
+
+\ex. \tsc{int:dat}, \tsc{ext:acc}
+\a. \tsc{dat} not attested
+\b. \tsc{acc} not attested
+
+\ex. \tsc{int:dat}, \tsc{ext:gen}
+\a. \tsc{dat} not attested
+\b. \tsc{gen} not attested
+
+\ex. \tsc{int:gen}, \tsc{ext:nom}
+\a. \tsc{gen} not attested
+\b. \tsc{nom} not attested
+
+\ex. \tsc{int:gen}, \tsc{ext:acc}
+\a. \tsc{gen} not attested
+\b. \tsc{acc} not attested
+
+\ex. \tsc{int:gen}, \tsc{ext:dat}
+\a. \tsc{gen} not attested
+\b. \tsc{dat} not attested
 
 
+Don't know:
 
-% Don't know:
-%
-% \ex. Old High German
-% \ag. gaat uz diu halt za dem iz forchaufent\\
-%  \\
-%  `' \hfill (Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923})
-% \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
-%  \\
-%  `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \hfill (Old High German, Tatian 118,1, \citealt[761]{behaghel1923})
-% \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
-%  \\
-%  `' \hfill (Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923})
-% \bg. thia laz ih themo iz lisit thar\\
-%  \\
-%  `' \hfill (Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923})
-% \bg. noh so neduohti in gnuoge des si habetin\\
-%  \\
-%  `' \hfill (Old High German, Notker I,63,29, \citealt[761]{behaghel1923})
-% \bg. tannoh pito ih tes noh fore ist (id quod)\\
-%  \\
-%  `' \hfill (Old High German, Notker 193,19, \citealt[761]{behaghel1923})
-%
-% So, to sum up:
+\ex. Old High German
+\ag. gaat uz diu halt za dem iz forchaufent\\
+ \\
+ `' \hfill (Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923})
+\bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
+ \\
+ `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \hfill (Old High German, Tatian 118,1, \citealt[761]{behaghel1923})
+\bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
+ \\
+ `' \hfill (Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923})
+\bg. thia laz ih themo iz lisit thar\\
+ \\
+ `' \hfill (Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923})
+\bg. noh so neduohti in gnuoge des si habetin\\
+ \\
+ `' \hfill (Old High German, Notker I,63,29, \citealt[761]{behaghel1923})
+\bg. tannoh pito ih tes noh fore ist (id quod)\\
+ \\
+ `' \hfill (Old High German, Notker 193,19, \citealt[761]{behaghel1923})
 
+So, to sum up:
 
 
 \begin{table}[h]
@@ -198,11 +238,36 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
     \begin{minipage}{\linewidth}
       \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
         \toprule
-          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}	  & \tsc{[nom]}                                                       & \tsc{[acc]} 	                                                  & \tsc{[dat]} 											                              & \tsc{[gen]} 											                                \\ \cmidrule(lr){1-5}
-          \tsc{[nom]} 		                                  & \colorbox{LG}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{acc}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{dat}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{gen}}} 	\\ \cmidrule(lr){1-5}
-          \tsc{[acc]} 		                                  & \diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{nom}} 	&	\colorbox{LG}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{dat}}} &	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}   \\ \cmidrule(lr){1-5}
-          \tsc{[dat]} 		                                  & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{acc}} & \colorbox{LG}{\tsc{dat}} 			                                  & \diagbox[linecolor=white]{*\tsc{dat}}{\colorbox{DG}{\tsc{gen}}}	  \\ \cmidrule(lr){1-5}
-          \tsc{[gen]} 		                                  & \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{acc}} & \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{dat}} & \colorbox{LG}{\tsc{gen}}				                                  \\
+          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
+              & \tsc{[nom]}
+              & \tsc{[acc]}
+              & \tsc{[dat]}
+              & \tsc{[gen]}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[nom]}
+              & \colorbox{LG}{\tsc{nom}}
+              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
+              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
+              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{gen}}}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[acc]}
+              & \diagbox[linecolor=white]{?\tsc{acc}}{?\tsc{nom}}
+              &	\colorbox{LG}{\tsc{acc}}
+              &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
+              &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[dat]}
+              & \diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{nom}}
+              &	\diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{acc}}
+              & \colorbox{LG}{\tsc{dat}}
+              & \diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{gen}}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[gen]}
+              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{nom}}
+              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{acc}}
+              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{dat}}
+              & \colorbox{LG}{\tsc{gen}}
+              \\
         \bottomrule
       \end{tabularx}
     \end{minipage}
@@ -301,10 +366,10 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
  `I invite whoever also Maria would be happy to meet.' \hfill \citep[344]{vogel2001}
 
 \ex. \tsc{int:gen}, \tsc{ext:dat}
-\ag. ?Bodo entledigt sich, w-em immer Gerhard misstraut.\\
+\ag. *Bodo entledigt sich, w-em immer Gerhard misstraut.\\
  Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.dat} ever Gerhard mistrusts\scsub{[dat]}\\
  `Bodo gets rid of whoever Gerhard mistrusts.' \hfill \citep[345]{vogel2001}
-\bg. ?Bodo entledigt sich, w-essen immer Gerhard misstraut.\\
+\bg. *Bodo entledigt sich, w-essen immer Gerhard misstraut.\\
  Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.gen} ever Gerhard mistrusts\scsub{[dat]}\\
  `Bodo gets rid of whoever Gerhard mistrusts.' \hfill \citep[345]{vogel2001}
 
@@ -318,11 +383,36 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
     \begin{minipage}{\linewidth}
       \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
         \toprule
-          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}	  & \tsc{[nom]}                                                       & \tsc{[acc]} 	                                                  & \tsc{[dat]} 											                & \tsc{[gen]} 											                  \\ \cmidrule(lr){1-5}
-          \tsc{[nom]} 		                                  & \colorbox{LG}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}} 	            & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}} & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{gen}} 	\\ \cmidrule(lr){1-5}
-          \tsc{[acc]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}} 	&	\colorbox{LG}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}} &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{gen}}   \\ \cmidrule(lr){1-5}
-          \tsc{[dat]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}} & \colorbox{LG}{\tsc{dat}} 			                    & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{gen}}	  \\ \cmidrule(lr){1-5}
-          \tsc{[gen]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{acc}} & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{dat}} 	& \colorbox{LG}{\tsc{gen}}				                  \\
+          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
+              & \tsc{[nom]}
+              & \tsc{[acc]}
+              & \tsc{[dat]}
+              & \tsc{[gen]}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[nom]}
+              & \colorbox{LG}{\tsc{nom}}
+              & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}}
+              & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}}
+              & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{gen}}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[acc]}
+              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}}
+              &	\colorbox{LG}{\tsc{acc}}
+              &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}}
+              &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{gen}}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[dat]}
+              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}
+              &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}}
+              & \colorbox{LG}{\tsc{dat}}
+              & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{gen}}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[gen]}
+              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{nom}}
+              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{acc}}
+              & \diagbox[linecolor=white]{\tsc{gen}}{*\tsc{dat}}
+              & \colorbox{LG}{\tsc{gen}}
+              \\
         \bottomrule
       \end{tabularx}
     \end{minipage}
