--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -10,7 +10,7 @@ Old High German only has proper attraction. Modern German only has inverse attra
 \begin{table}[h]\label{tbl:intextgoth}
 	\center
 	\caption {\tsc{int} vs. \tsc{ext} in Modern and Old High German and Gothic}
-	\begin{minipage}{\linewidth}
+	\begin{minipage}{0.6\linewidth}
 		\begin{tabularx}{\textwidth}{c *{2}{Y}}
 		\toprule
 		 								& \tsc{int>ext}				& \tsc{ext>int}				\\
@@ -25,74 +25,7 @@ Old High German only has proper attraction. Modern German only has inverse attra
 \end{table}
 
 
-
-
 \subsection{Gothic}
-
-\ex. \tsc{int:nom}, \tsc{ext:acc}
-\a. \tsc{nom} not attested
-\bg. jah þ-o-ei ist us Laudeikaion jus ussiggwaid\\
- and D-\tsc{f.sg.acc}-\tsc{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
- `and read that which is from Laodicea' \hfill (Colossians 4:16, gloss and translation by \citealt[357]{harbert1978})
-
-\ex. \tsc{int:nom}, \tsc{ext:dat}
-\a. \tsc{nom} not attested
-\bg. þ-aim-ei iupa sind fraþjaiþ\\
- D-\tsc{pl.dat}-\tsc{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
- `set your mind on those which are above' \hfill (Colossians 3:2, gloss and translation by \citealt[339]{harbert1978})
-
-\ex. \tsc{int:nom}, \tsc{ext:gen}
-\a. \tsc{nom} not attested
-\b. \tsc{gen} not attested
-
-\ex. \tsc{int:acc}, \tsc{ext:nom}
-\ag. þ-an-ei frijos siuks ist\\
- D-\tsc{m.sg.acc}-\tsc{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
- `the one whom you love is sick' \hfill (John 11:3, gloss and translation by \citealt[342]{harbert1978})
-\b. \tsc{nom} not attested
-
-\ex. \tsc{int:acc}, \tsc{ext:dat}
-\a. \tsc{acc} not attested
-\bg. hva nu wileiþ ei taujau þ-amm-ei qiþiþ þiudan Iudaie?\\
- what now want that do\scsub{[dat]} D-\tsc{m.sg.dat}-\tsc{comp} say\scsub{[acc]} king {of Jews}\\
- `what now do you wish that I do to him whom you call King of the Jews?' \hfill (Mark 15:12, gloss and translation by \citealt[339]{harbert1978})
-
-\ex. \tsc{int:acc}, \tsc{ext:gen}
-\a. \tsc{acc} not attested
-\bg. ni waiht þ-iz-ei gasehvun\\
- not thing\scsub{[gen]} D-\tsc{n.sg.gen}-\tsc{comp} saw\scsub{[acc]}\\
- `not any of that which they saw' \hfill (Luke 9:36, gloss and translation by \citealt[340]{harbert1978})
-
-\ex. \tsc{int:dat}, \tsc{ext:nom}
-\ag. iþ þ-amm-ei leitil fraletada leitil frijod\\
- but D-\tsc{m.sg.dat}-\tsc{comp} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
- `but the one whom little is forgiven loves little' \hfill (Luke 7:47, gloss and translation by \citealt[342]{harbert1978})
-\b. \tsc{nom} not attested
-
-\ex. \tsc{int:dat}, \tsc{ext:acc}
-\ag. ushafjands ana þ-amm-ei lag\\
- picking up on\scsub{[acc]} D-\tsc{m.sg.dat}-\tsc{comp} lay\scsub{[dat]}\\
- `picking up that on which he lay' \hfill (Luke 5:25, gloss and translation by \citealt[343]{harbert1978})
-\b. \tsc{acc} not attested
-
-\ex. \tsc{int:dat}, \tsc{ext:gen}
-\a. \tsc{dat} not attested
-\b. \tsc{gen} not attested
-
-\ex.  \tsc{int:gen}, \tsc{ext:nom}
-\a. \tsc{gen} not attested
-\b. \tsc{nom} not attested
-
-\ex. \tsc{int:gen}, \tsc{ext:acc}
-\ag. bugei þ-iz-ei þaurbeima\\
- buy\scsub{[acc]} D-\tsc{n.sg.gen}-\tsc{comp} need\scsub{[gen]}\\
- `buy that which we need' \hfill (John 13:29, gloss and translation by \citealt[343]{harbert1978})
-\b. \tsc{acc} not attested
-
-\ex. \tsc{int:gen}, \tsc{ext:dat}
-\a. \tsc{gen} not attested
-\b. \tsc{dat} not attested
-
 
 \begin{table}[h]
   \center
