--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -8,6 +8,14 @@
   pages = {853-871}
 }
 
+@book{boretzky1994,
+  title={Romani: Grammatik des Kalderaš-Dialektes mit Texten und Glossar},
+  author={Boretzky, Norbert},
+  journal={Wiesbaden},
+  publisher={Harrassowitz Verlag},
+  year={1994}
+}
+
 @unpublished{mortensen2004,
   title = {Two {{Types}} of {{Variabel Elements}} in {{Hmong Anaphora}}},
   author = {Mortensen, David},
@@ -76290,16 +76298,10 @@
   pages = {22-39}
 }
 
-@article{boretzky1994,
-  title = {Romani: {{Grammatik Des Kaldera{\v s}}}-{{Dialekts Mit Texten Und Glossar}}},
-  journal = {Wiesbaden: Harassowitz Verlag},
-  author = {Boretzky, Norbert},
-  year = {1994}
-}
-
-@article{nikolaeva1999ostyak,
-  title = {Ostyak ({{Languages}} of the {{World}}/{{Materials}} 305)},
-  journal = {M\"unchen: LINCOM Europa},
+@article{nikolaeva1999,
+  title = {Ostyak},
+  journal = {München},
+  publisher = {Lincom Europa},
   author = {Nikolaeva, Irina},
   year = {1999}
 }
