--- a/case-complexity.tex
+++ b/case-complexity.tex
@@ -129,7 +129,7 @@ numerals
 
 \begin{table}[h]
   \center
-	\caption {Transparent case containment in Khanty \citep[16]{nikolaeva1999}
+	\caption {Transparent case containment in Khanty \citep[16]{nikolaeva1999}}
 	\begin{minipage}{0.4\linewidth}
 		\begin{tabularx}{\textwidth}{c *{3}{Y}}
 		\toprule
